--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,27 +9,32 @@ bcrypt==3.2.0
 beautifulsoup4==4.12.2
 billiard==4.2.0
 blinker==1.9.0
+Brlapi==0.8.3
 cachetools==5.4.0
 celery==5.3.4
 certifi==2024.7.4
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
+chrome-gnome-shell==0.0.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 contourpy==1.2.1
 cryptography==37.0.4
+cupshelpers==1.0
 cycler==0.12.1
 dbus-python==1.2.18
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
 distro==1.7.0
+distro-info==1.1+ubuntu0.2
 Django==3.2
 dnspython==2.6.1
 docker==6.1.3
+duplicity==0.8.21
 email_validator==2.2.0
 et_xmlfile==2.0.0
 exceptiongroup==1.2.2
@@ -130,8 +135,10 @@ pytest==7.4.2
 pytest-custom-exit-code==0.3.0
 pytest-html==4.0.1
 pytest-metadata==3.1.1
+python-apt==2.4.0+ubuntu4
 python-barcode==0.15.1
 python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.1
 python-jenkins==1.8.1
 python-multipart==0.0.9
@@ -189,4 +196,3 @@ wsproto==1.2.0
 xdg==5
 xlrd==2.0.1
 zipp==1.0.0
-
